menu and topic for site

--- a/Yoga.html
+++ b/Yoga.html
@@ -37,7 +37,7 @@
         <ul class="navbar-nav ml-auto">
           </li>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">portfolio</a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html">Ryon</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="education.html">Education</a>
@@ -67,7 +67,7 @@
       <img class="masthead-avatar mb-5" src="img/avataaars.svg" alt="">
 
       <!-- Masthead Heading -->
-      <h1 class="masthead-heading text-uppercase mb-0">Start Bootstrap</h1>
+      <h1 class="masthead-heading text-uppercase mb-0">yoga</h1>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
@@ -79,7 +79,8 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p>
+      <p class="masthead-subheading font-weight-light mb-0">The body benefits from movement, and the mind benefits from
+        stillness.” <br> — Sakyong Mipham</p>
 
     </div>
   </header>
